--- a/demo/package.json
+++ b/demo/package.json
@@ -25,7 +25,7 @@
     "nativescript-angular": "~6.1.0",
     "nativescript-permissions": "^1.2.3",
     "nativescript-theme-core": "~1.0.4",
-    "nativescript-video-recorder": "file:../src",
+    "tns-video-recorder": "file:../src",
     "reflect-metadata": "~0.1.8",
     "rxjs": "^6.0.0",
     "tns-core-modules": "^4.2.0",
